--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,45 @@
 @import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @font-face {
-    font-family: 'MatterFont';
-    src: url('/assets/fonts/Matter-Regular.ttf') format('truetype');
+  font-family: 'MatterFont';
+  src: url('/assets/fonts/Matter-Regular.ttf') format('truetype');
 }
 
-.custom-container {
-  max-width: 1440px;
-  margin-inline: auto;
-  padding-inline: 100px;
-}
+:root {
+  --font-xs: 18px;
+  --font-sm: 22px;
+  --font-md: 24px;
+  --font-lg: 36px;
+  --font-xl: 42px;
+  --font-2xl: 50px;
+  --font-3xl: 60px;
+  --font-4xl: 72px;
+  --font-hero: 160px;
 
-.navbar>.container-fluid {
-  padding: 30px 100px;
+  --color-text-primary: #030303;
+  --color-text-secondary: #444444;
+  --color-black: #000000;
+  --color-text-muted: #656464;
+  --color-white: #ffffff;
+  --color-text-light-muted: #afafaf;
+  --color-text-soft: #c4c4c4;
+  --color-light: #f5f5f5;
+
+  --font-weight-primary: 400;
+  --font-weight-secondary: 500;
+
+  --lh-xs: 18px;
+  --lh-sm: 22px;
+  --lh-md: 24px;
+  --lh-md-plus: 24.48px;
+  --lh-base: 29.76px;
+  --lh-lg: 29.92px;
+  --lh-xl: 32.64px;
+  --lh-2xl: 36px;
+  --lh-3xl: 52.08px;
+  --lh-4xl: 62px;
+  --lh-5xl: 74.4px;
+  --lh-6xl: 89.28px;
+  --lh-hero: 160px;
 }
