--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,8 @@
   --font-4xl: 72px;
   --font-hero: 160px;
 
-  --color-text-primary: #030303;
-  --color-text-secondary: #444444;
+  --color-primary: #030303;
+  --color-secondary: #444444;
   --color-black: #000000;
   --color-text-muted: #656464;
   --color-white: #ffffff;
